--- a/index.html
+++ b/index.html
@@ -355,8 +355,7 @@
               state-of-the-art Multi-Speciality Clinics dedicated to addressing a spectrum of medical needs. Our team of
               highly qualified and experienced doctors covers a diverse range of specialties, ensuring that patients
               receive personalized and expert care.</p>
-            <p>At the heart of our commitment is a cutting-edge Surgical & Laparoscopy Center, where innovation meets
-              precision. Equipped with advanced technology and manned by skilled professionals, we provide top-notch
+            <p>Equipped with advanced technology and manned by skilled professionals, we provide top-notch
               surgical interventions. Our focus on minimally invasive procedures reflects our dedication to patient
               comfort and quick recovery. Medvis Hospital is not just a medical facility; it's a holistic health
               destination, where excellence in healthcare is our constant pursuit.</p>
