--- a/services/Extraction(Wisdom Tooth).html
+++ b/services/Extraction(Wisdom Tooth).html
@@ -179,7 +179,7 @@
                 <div class="col-sm-6 d-flex services align-self-stretch p-4 ftco-animate">
                     <div class="media block-6 d-block">
                         <div class="img w-100">
-                            <img src="../images/scaling-and-polishing.jpg" alt="">
+                            <img src="../images/Extraction(Wisdom Tooth).jpg" alt="">
                         </div>
 
                     </div>
