--- a/index.html
+++ b/index.html
@@ -671,10 +671,30 @@
     data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 d-flex flex-column ">
           <h3 class="mb-4">We promised to take care our patients and we delivered.</h3>
           <p>We fulfilled our commitment to care for our patients with unwavering dedication and delivered on our
             promise, ensuring their well-being and satisfaction.</p>
+        </div>
+        <div class="col-md-6">
+          <form action="#">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Your Name">
+            </div>
+
+            <div class="form-group">
+              <input type="number" class="form-control" placeholder="Enter Your Number">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Your Email">
+            </div>
+            <div class="form-group">
+              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+            </div>
+            <div class="form-group">
+              <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+            </div>
+          </form>
         </div>
       </div>
     </div>
