--- a/contact.html
+++ b/contact.html
@@ -126,13 +126,16 @@
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Name">
             </div>
+            <div class="form-group">
+              <input type="number" class="form-control" placeholder="Enter Your Age">
+            </div>
 
             <div class="form-group">
               <input type="number" class="form-control" placeholder="Enter Your Number">
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Email">
-            </div>
+            </div> -->
             <div class="form-group">
               <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
             </div>
@@ -151,6 +154,20 @@
       </div>
     </div>
   </section>
+
+  <style>
+    input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"]:hover::-webkit-inner-spin-button,
+input[type="number"]:hover::-webkit-outer-spin-button {
+  display: none;
+}
+  </style>
+
   <section class="ftco-section testimony-section bg-light">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-2">
