--- a/index.html
+++ b/index.html
@@ -87,15 +87,20 @@
             <i class="fa fa-angle-down mobile"></i>
             <ul class="drop-items">
               <li class="nav-item">
-                <a href="#">Dental - Smile Designing 
+                <a href="/services/Preventive-Care.html">Preventive Care
+
                 </a>
               </li>
-              <li><a href="./services/general-medicine.html">General Medicine</a></li>
-              <li><a href="./services/day-care-procedures.html">Day Care Procedures</a></li>
-              <li><a href="./services/physiotherapy.html">Physiotherpy</a></li>
-              <li><a href="./services/lab.html">Lab Service</a></li>
-              <li><a href="./services/medifacials.html">Medifacials</a></li>
-              <li><a href="./services/tan-removal.html">Tan Removal</a></li>
+              <li><a href="/services/Chronic-Disease-Management.html">Chronic Disease Management
+              </a></li>
+              <li><a href="services/Acute-Care.html">Acute Care
+              </a></li>
+              <li><a href="/services/Diagnostic-Services.html">Diagnostic Services
+              </a></li>
+              <li><a href="services/Personalizedm-Treatment-Plans.html"> Personalizedm Treatment Plans
+              </a></li>
+              <!-- <li><a href="./services/medifacials.html">Medifacials</a></li> -->
+              <!-- <li><a href="./services/tan-removal.html">Tan Removal</a></li> -->
              
             
             </ul>
