--- a/services/Acute-Care.html
+++ b/services/Acute-Care.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Acute Care</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Acute Care</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Acute Care</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,26 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Respiratory Infections (Cold, Flu, Bronchitis):
+                                Respiratory infections like the common cold, flu, and bronchitis affect the airways,
+                                Causing symptoms such as cough, congestion, and fever. They are often viral and spread easily,
+                                Particularly in crowded environments. Treatment typically includes rest, fluids, and symptom management,
+                                with antibiotics used only for bacterial infections.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                Urinary Tract Infections (UTIs):
+                                Urinary tract infections occur when bacteria enter the urinary system, leading to symptoms like painful urination,
+                                Frequent urges to urinate, and abdominal discomfort. UTIs are more common in women and can be treated with antibiotics.
+                                Drinking plenty of water and maintaining good hygiene can help prevent them.
+
+                                Skin Conditions (Rashes, Infections):
+                                Skin conditions, including rashes and infections, can result from allergic reactions, bacteria, viruses, or fungi.
+                                Symptoms range from itching and redness to swelling and pain. Treatment depends on the underlying cause, often involving topical creams, oral medications, or antifungal agents.
+
+                                Joint Pain and Musculoskeletal Issues:
+                                Joint pain and musculoskeletal problems, such as arthritis or tendonitis, affect mobility and can cause stiffness, inflammation, and discomfort.
+                                These conditions may result from injury, overuse, or aging. Managing them involves physical therapy, pain relief medications, and lifestyle modifications like exercise and weight management.
+                                
+                                
                             </p>
                         </div>
                     </div>
@@ -169,7 +177,7 @@
                 <div class="col-sm-6 d-flex services align-self-stretch p-4 ftco-animate">
                     <div class="media block-6 d-block">
                         <div class="img w-100">
-                            <img src="../images/bleeding-gum.avif" alt="">
+                            <img src="../images/Acute Care.jpg" alt="">
                         </div>
 
                     </div>
@@ -384,11 +392,11 @@
                         <li><a href="./hair-transplantation.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Hair
                                 Transplantation</a>
-                        </li>
-                        <!-- <li><a href="./dental-services.html"><span
+                        <!-- </li>
+                        <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
