--- a/services/Personalizedm-Treatment-Plans.html
+++ b/services/Personalizedm-Treatment-Plans.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Personalizedm Treatment Plans</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Personalizedm Treatment Plans</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Personalizedm Treatment Plans</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,27 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                Tailored Medication Management:
+                                Tailored medication management involves customizing prescriptions to suit an individual's specific health needs,
+                                Minimizing side effects, and optimizing effectiveness. This personalized approach helps manage chronic conditions and ensures that medications interact safely.
+                                Regular reviews and adjustments by healthcare professionals are key to successful long-term treatment.
+
+                                Lifestyle and Dietary Modifications:
+                                Lifestyle and dietary modifications focus on improving overall health through balanced nutrition, exercise, and healthy habits.
+                                These changes can prevent or manage conditions like obesity, heart disease, and diabetes. A holistic approach promotes sustainable improvements in physical and mental well-being.
+
+                                Physical Therapy Referrals and Rehabilitation Support:
+                                Physical therapy referrals provide targeted rehabilitation for those recovering from injuries, surgeries, or chronic conditions.
+                                Physical therapists guide patients through exercises to restore mobility, strength, and function. Ongoing support ensures faster recovery and reduces the risk of future injuries.
+
+                                Stress Management and Mental Health Referrals:
+                                Stress management techniques, along with mental health referrals, help individuals cope with emotional and psychological challenges.
+                                Counseling, therapy, and relaxation practices like meditation improve mental well-being. Access to mental health resources ensures timely
+                                support for those experiencing anxiety, depression, or chronic stress.
+                                
+
+                                
                             </p>
                         </div>
                     </div>
@@ -169,7 +178,7 @@
                 <div class="col-sm-6 d-flex services align-self-stretch p-4 ftco-animate">
                     <div class="media block-6 d-block">
                         <div class="img w-100">
-                            <img src="../images/bleeding-gum.avif" alt="">
+                            <img src="../images/Personalizedm Treatment Plans.jpg" alt="">
                         </div>
 
                     </div>
@@ -384,11 +393,11 @@
                         <li><a href="./hair-transplantation.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Hair
                                 Transplantation</a>
-                        </li>
-                        <!-- <li><a href="./dental-services.html"><span
+                        <!-- </li>
+                        <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
