--- a/services/Chronic-Disease-Management.html
+++ b/services/Chronic-Disease-Management.html
@@ -119,10 +119,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Bleeding Gums</h1>
+                    <h1 class="mb-2 bread">Chronic Disease Management</h1>
                     <p class="breadcrumbs"><span class="mr-2"><a href="/index.html">Home <i
                                     class="ion-ios-arrow-forward"></i></a></span> <span>Service <i
-                                class="ion-ios-arrow-forward"></i></span> <span>Bleeeding Gums</span></p>
+                                class="ion-ios-arrow-forward"></i></span> <span>Chronic Disease Management</span></p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="media block-6 d-block">
 
                         <div class="media-body p-2 mt-1">
-                            <h3 class="heading">Bleeeding Gums</h3>
+                            <h3 class="heading">Chronic Disease Management</h3>
                             <p>
                                 <!-- Medifacials, short for medical facials, offer a more advanced and personalized approach
                                 to skincare compared to traditional facials. These treatments are performed by licensed
@@ -150,18 +150,45 @@
                                 individual skin needs and conditions. By combining professional expertise with
                                 high-quality ingredients and cutting-edge technology, medifacials can provide targeted
                                 solutions that go beyond surface-level care. -->
-                                Bleeding gums are a common issue that can indicate underlying dental or health problems. 
-                                Often, they are caused by gingivitis, an early form of gum disease resulting from plaque 
-                                buildup at the gumline. Symptoms may include redness, swelling, and bleeding during brushing or flossing.
-                                Gingivitis is usually reversible with proper oral hygiene, which includes regular brushing, flossing, 
-                                and professional dental cleanings. However, if left untreated, it can progress to periodontitis, 
-                                a more severe gum disease that can lead to tooth loss.
+                                Hypertension (High Blood Pressure):
+                                Hypertension is a condition where the force of blood against artery walls is consistently too high,
+                                Increasing the risk of heart disease and stroke. Often called a "silent killer," it can go unnoticed without symptoms for years.
+                                Managing hypertension through diet, exercise, and medication is essential for long-term heart health.
 
-                                Other potential causes of bleeding gums include vitamin deficiencies, such as a lack of vitamin C,
-                                which can lead to scurvy, and certain medical conditions like blood disorders or diabetes. Medications, 
-                                especially blood thinners, can also contribute to gum bleeding. It's important to address bleeding gums
-                                by consulting a dentist or healthcare provider to identify the underlying cause and receive appropriate treatment. 
-                                Regular dental check-ups and a healthy lifestyle can help maintain gum health and prevent bleeding.  
+                                Diabetes Mellitus:
+                                Diabetes is a metabolic disorder where the body struggles to regulate blood sugar levels due to insufficient insulin production or usage.
+                                It can lead to serious complications like nerve damage, kidney disease, and heart issues. Proper management includes medication, a healthy diet, and regular blood sugar monitoring.
+
+                                Asthma and COPD (Chronic Obstructive Pulmonary Disease):
+                                Asthma and COPD are chronic respiratory conditions that cause airflow obstruction and breathing difficulties.
+                                Asthma is often triggered by allergens, while COPD is typically associated with long-term smoking.
+                                Both conditions require medication and lifestyle adjustments to control symptoms and improve lung function.
+
+                                Heart Disease:
+                                Heart disease refers to various conditions affecting the heart, including coronary artery disease, arrhythmias, and heart failure.
+                                It is a leading cause of death worldwide, often linked to lifestyle factors like smoking, poor diet, and lack of exercise. 
+                                Prevention focuses on heart-healthy habits and medical interventions.
+
+                                Thyroid Disorders:
+                                Thyroid disorders occur when the thyroid gland produces too much or too little hormone, affecting metabolism, energy levels, and body weight.
+                                Hypothyroidism and hyperthyroidism are the most common types. Treatment typically involves hormone regulation through medication or other therapies to restore balance.
+
+                                Gastrointestinal Conditions:
+                                Gastrointestinal conditions, such as acid reflux, irritable bowel syndrome (IBS), and ulcers, affect the digestive tract.
+                                Symptoms include pain, bloating, and changes in bowel habits. Managing these conditions often requires dietary changes,
+                                Medications, and lifestyle modifications to promote digestive health.
+
+
+
+
+
+
+
+
+
+                                
+
+                                
                             </p>
                         </div>
                     </div>
@@ -169,7 +196,7 @@
                 <div class="col-sm-6 d-flex services align-self-stretch p-4 ftco-animate">
                     <div class="media block-6 d-block">
                         <div class="img w-100">
-                            <img src="../images/bleeding-gum.avif" alt="">
+                            <img src="../images/Chronic Disease Managemen.jpg" alt="">
                         </div>
 
                     </div>
@@ -384,11 +411,11 @@
                         <li><a href="./hair-transplantation.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Hair
                                 Transplantation</a>
-                        </li>
-                        <!-- <li><a href="./dental-services.html"><span
+                        <!-- </li>
+                        <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                                Care</a></li> -->
-                        <!-- <li><a href="./general-medicine.html"><span
+                                Care</a></li>
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General
                                 Medicine</a></li> -->
                     </ul>
