--- a/services/Flexible-Rpd-Denture.html
+++ b/services/Flexible-Rpd-Denture.html
@@ -172,7 +172,7 @@
                 <div class="col-sm-6 d-flex services align-self-stretch p-4 ftco-animate">
                     <div class="media block-6 d-block">
                         <div class="img w-100">
-                            <img src="../images/scaling-and-polishing.jpg" alt="">
+                            <img src="../images/Flexible RPD Denture.jpg" alt="">
                         </div>
 
                     </div>
