--- a/contact.html
+++ b/contact.html
@@ -134,14 +134,13 @@
               <input type="number" class="form-control" required placeholder="Enter Your Number">
             </div>
             <div class="w-100">
-                <input type="time" class="form-control input-form" required min="09:00" max="21:00">
+              <input type="time" class="form-control input-form" required min="09:00" max="21:00">
 
-                <select class="form-control input-form">
-                  <option disabled>-- Select a service --</option>
-                  <option>General Medicine</option>
-                  <option>Dental Care</option>
-                  <option>Hair Transplantation</option>
-                </select>
+              <select class="form-control input-form">
+                <option>General Medicine</option>
+                <option>Dental Care</option>
+                <option>Hair Transplantation</option>
+              </select>
             </div>
             <!-- <div class="form-group">
               <input type="text" class="form-control" required placeholder="Your Email">
@@ -175,11 +174,6 @@
     input[type="number"]:hover::-webkit-inner-spin-button,
     input[type="number"]:hover::-webkit-outer-spin-button {
       display: none;
-    }
-    .input-form{
-      display: inline-block;
-      width:48% !important;
-      margin-bottom: 10px;
     }
   </style>
 
@@ -391,26 +385,20 @@
         <div class="col-md ftco-footer-widget  mb-5 ml-md-4">
           <h2 class="ftco-heading-2">Services</h2>
           <ul class="list-unstyled">
-            <li><a href="./services/orthopedic.html"><span
-                  class="ion-ios-arrow-round-forward mr-2"></span>Orthopedic</a>
-            </li>
-            <li><a href="./services/gynecology.html"><span
-                  class="ion-ios-arrow-round-forward mr-2"></span>Gynecology</a>
-            </li>
-            <li><a href="./services/hair-transplantation.html"><span
-                  class="ion-ios-arrow-round-forward mr-2"></span>Hair
-                Transplantation</a>
-            </li>
             <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental
                 Care</a></li>
             <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
                 Medicine</a></li>
+            <li><a href="./services/hair-transplantation.html"><span
+                  class="ion-ios-arrow-round-forward mr-2"></span>Hair
+                Transplantation</a>
+            </li>
           </ul>
         </div>
         <div class="col-md">
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Opening Hours</h2>
-            <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 24/7</h3>
+            <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>Mon to Sun - 09 AM to 09 PM</h3>
           </div>
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Subscribe Us!</h2>
