--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
     data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 d-flex flex-column ">
+        <div class="col-md-6 d-flex flex-column justify-content-center">
           <h3 class="mb-4">We promised to take care our patients and we delivered.</h3>
           <p>We fulfilled our commitment to care for our patients with unwavering dedication and delivered on our
             promise, ensuring their well-being and satisfaction.</p>
@@ -679,15 +679,27 @@
         <div class="col-md-6">
           <form action="#">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name">
+              <input type="text" class="form-control" required placeholder="Enter Your Name">
+            </div>
+            <div class="form-group">
+              <input type="number" class="form-control" required placeholder="Enter Your Age">
             </div>
 
             <div class="form-group">
-              <input type="number" class="form-control" placeholder="Enter Your Number">
+              <input type="number" class="form-control" required placeholder="Enter Your Number">
             </div>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Email">
+            <div class="w-100">
+              <input type="time" class="form-control input-form" required min="09:00" max="21:00">
+
+              <select class="form-control input-form">
+                <option>General Medicine</option>
+                <option>Dental Care</option>
+                <option>Hair Transplantation</option>
+              </select>
             </div>
+            <!-- <div class="form-group">
+              <input type="text" class="form-control" required placeholder="Your Email">
+            </div> -->
             <div class="form-group">
               <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
             </div>
