--- a/contact.html
+++ b/contact.html
@@ -122,31 +122,32 @@
     <div class="container">
       <div class="row d-flex align-items-stretch no-gutters">
         <div class="col-md-12 p-4 p-md-5 bg-light">
-          <form id="contactForm">
+          <form id="contactForm" action="#">
             <div class="form-group">
-              <input type="text" class="form-control" required placeholder="Enter Your Name">
+              <input id="name" type="text" class="form-control" required placeholder="Enter Your Name">
             </div>
             <div class="form-group">
-              <input type="number" class="form-control" required placeholder="Enter Your Age">
+              <input id="age" type="number" class="form-control" required placeholder="Enter Your Age">
             </div>
 
             <div class="form-group">
-              <input type="number" class="form-control" required placeholder="Enter Your Number">
+              <input id="mobileNumber" type="number" class="form-control" required placeholder="Enter Your Number">
             </div>
             <div class="w-100">
-              <input type="time" class="form-control input-form" required min="09:00" max="21:00">
+              <input id="time" type="time" class="form-control input-form" required min="09:00" max="21:00">
 
-              <select class="form-control input-form">
-                <option>General Medicine</option>
-                <option>Dental Care</option>
-                <option>Hair Transplantation</option>
+              <select id="service" class="form-control input-form">
+                <option value="General Medicine">General Medicine</option>
+                <option value="Dental Care">Dental Care</option>
+                <option value="Hair Transplantation">Hair Transplantation</option>
               </select>
             </div>
             <!-- <div class="form-group">
               <input type="text" class="form-control" required placeholder="Your Email">
             </div> -->
             <div class="form-group">
-              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+              <textarea name="" id="complaint" cols="30" rows="7" class="form-control"
+                placeholder="Complaint"></textarea>
             </div>
             <div class="form-group">
               <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
