--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             <i class="fa fa-angle-down mobile"></i>
             <ul class="drop-items">
               <li class="nav-item">
-                <a href="/services/Preventive-Care.html">Preventive Care
+                <a href="/services/preventive-care.html">Preventive Care
 
                 </a>
               </li>
-              <li><a href="/services/Chronic-Disease-Management.html">Chronic Disease Management
+              <li><a href="/services/chronic-disease-management.html">Chronic Disease Management
               </a></li>
               <li><a href="services/Acute-Care.html">Acute Care
               </a></li>
@@ -107,7 +107,7 @@
           </li>
           <li class="nav-item drop-down">
 
-            <a href="services.html" class="nav-link">
+            <a href="#" class="nav-link">
               Dental Care
               <i class="fa fa-angle-down desktop"></i>
 
