--- a/services/Root-Canal-Treatment.html
+++ b/services/Root-Canal-Treatment.html
@@ -179,7 +179,7 @@
                 <div class="col-sm-12 ">
                     <p class="p-2 mt-3">
                         This personalized approach not only
-                        enhances the overall health and appearance of the skin but also helps in maintaining
+                        Enhances the overall health and appearance of the skin but also helps in maintaining
                         long-term skin health. Patients often experience more immediate and dramatic results,
                         making medifacials a popular choice for those seeking both cosmetic and therapeutic skin
                         improvements.
