--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,10 @@
                     above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda Jagir, Hyderabad,
                     Telangana 500089</span></li>
                 <li><a href="tel:+918886669086"><span class="icon icon-phone"></span><span
-                      class="text">+918886669086</span></a></li>
+                      class="text">+918886669086</span></a>
+                      <a href="tel:+918886669087"><span class="icon icon-phone"></span><span
+                        class="text">+918886669087</span></a>
+                    </li>
                 <li><a href="mailto:Medvishospital@gmail.com"><span class="icon icon-envelope"></span><span
                       class="text">Medvishospital@gmail.com</span></a></li>
               </ul>
