--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,127 @@
     integrity="sha512-...your-sha512-code-here..." crossorigin="anonymous" />
 </head>
 
-<body>
+<div class=" top-header">
+  <div class="container">
+    <div class="row flex-nowrap  d-flex justify-content-between align-items-center ">
+
+      <div class="col-md-6   topper mb-md-0 mb-2  text-left">
+
+        <div class="pr-md-4  pl-md-0 pl-3 text">
+          <p class="con">
+            <a href="tell:+918886669086">
+              <i class="fa fa-phone"></i> <span>+918886669086</span></a>
+          </p>
+
+        </div>
+      </div>
+      <div class="col-md-6  topper mb-md-0 text-right">
+
+
+        <div class="pr-md-4 pl-md-0 pl-3 text">
+          <a href="https://maps.app.goo.gl/N2rAPQby3kpjCnXH6">
+            <p class="con"> <i class="fa fa-location-pin"></i> Manikonda
+              Jagir,HYDERABAD</p>
+          </a>
+
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
+  <div class="col-md-2  mb-2 mb-md-0 align-items-center">
+    <a class="navbar-brand" href="index.html"><img src="images/MEDVIS-1.png" alt="medvis hospital" /></a>
+  </div>
+  <div class="container d-flex align-items-center justify-content-end">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+      aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="oi oi-menu"></span>
+      <!-- Menu -->
+    </button>
+    <div class="collapse navbar-collapse" id="ftco-nav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
+        <li class="nav-item drop-down">
+
+          <a href="#" class="nav-link">
+            General Medicine
+            <i class="fa fa-angle-down desktop"></i>
+
+          </a>
+          <i class="fa fa-angle-down mobile"></i>
+          <ul class="drop-items">
+            <li class="nav-item">
+              <a href="/services/preventive-care.html">Preventive Care
+
+              </a>
+            </li>
+            <li><a href="/services/chronic-disease-management.html">Chronic Disease Management
+            </a></li>
+            <li><a href="services/Acute-Care.html">Acute Care
+              </a></li>
+            <li><a href="/services/Diagnostic-Services.html">Diagnostic Services
+              </a></li>
+            <li><a href="services/Personalizedm-Treatment-Plans.html"> Personalizedm Treatment Plans
+              </a></li>
+            <!-- <li><a href="./services/medifacials.html">Medifacials</a></li> -->
+            <!-- <li><a href="./services/tan-removal.html">Tan Removal</a></li> -->
+
+
+          </ul>
+        </li>
+        <li class="nav-item drop-down">
+
+          <a href="#" class="nav-link">
+            Dental Care
+            <i class="fa fa-angle-down desktop"></i>
+
+          </a>
+          <i class="fa fa-angle-down mobile"></i>
+          <ul class="drop-items">
+            <li class="nav-item">
+              <a href="services/scaling-and-polishing.html">Scaling And Polishing</a>
+            </li>
+            <li><a href="services/bleeding-gums.html">Bleeding Gums</a></li>
+            <li><a href="services/flap-surgery.html">Flap Surgery</a></li>
+            <li><a href="services/orthodontic-treatments.html">Orthodontic Treatments</a></li>
+            <li><a href="services/aligners.html">Aligners</a></li>
+            <li><a href="services/fillings.html">Fillings</a></li>
+            <li><a href="services/root-canal-treatment.html">Root Canal Treatment</a></li>
+            <li><a href="services/extraction.html">Extraction(Wisdom Tooth)</a></li>
+            <li><a href="services/zirconia-crowns.html">Zirconia Crowns</a></li>
+            <li><a href="services/implants-over-denture.html">Implants Over Denture</a></li>
+            <li><a href="services/flexible-rpd-denture.html">Flexible RPD Denture</a></li>
+            <li><a href="services/bps.html">BPS Denture</a></li>
+          </ul>
+        </li>
+        <li class="nav-item drop-down">
+
+          <a href="#" class="nav-link">
+            Hair Transplantation
+            <i class="fa fa-angle-down desktop"></i>
+
+          </a>
+          <i class="fa fa-angle-down mobile"></i>
+          <ul class="drop-items">
+            <li class="nav-item">
+              <a href="services/prp-hair-treatment.html">PRP Hair Treatment
+              </a>
+            </li>
+            <li><a href="services/gfc-hair-growth.html">GFC Hair Growth</a></li>
+          </ul>
+        </li>
+        <li class="nav-item active"><a href="contact.html" class="nav-link">Contact Us</a></li>
+        <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- <body>
   <div class="py-md-2 py-1 border-bottom top-header">
     <div class="container">
       <div class="row  d-flex justify-content-between align-items-center ">
@@ -99,7 +219,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
   <!-- END nav -->
 
 
