--- a/services/Preventive-Care.html
+++ b/services/Preventive-Care.html
@@ -115,19 +115,19 @@
                 <i class="fa fa-angle-down mobile"></i>
                 <ul class="drop-items">
                   <li class="nav-item">
-                    <a href="services/scaling-and-polishing.html">Scaling And Polishing</a>
+                    <a href="./scaling-and-polishing.html">Scaling And Polishing</a>
                   </li>
-                  <li><a href="services/bleeding-gums.html">Bleeding Gums</a></li>
-                  <li><a href="services/flap-surgery.html">Flap Surgery</a></li>
-                  <li><a href="services/orthodontic-treatments.html">Orthodontic Treatments</a></li>
-                  <li><a href="services/aligners.html">Aligners</a></li>
-                  <li><a href="services/fillings.html">Fillings</a></li>
-                  <li><a href="services/root-canal-treatment.html">Root Canal Treatment</a></li>
-                  <li><a href="services/extraction.html">Extraction(Wisdom Tooth)</a></li>
+                  <li><a href="./bleeding-gums.html">Bleeding Gums</a></li>
+                  <li><a href="./flap-surgery.html">Flap Surgery</a></li>
+                  <li><a href="./orthodontic-Treatments.html">Orthodontic Treatments</a></li>
+                  <li><a href="./aligners.html">Aligners</a></li>
+                  <li><a href="./fillings.html">Fillings</a></li>
+                  <li><a href="./root-canal-treatment.html">Root Canal Treatment</a></li>
+                  <li><a href="./extraction.html">Extraction(Wisdom Tooth)</a></li>
                   <li><a href="services/zirconia-crowns.html">Zirconia Crowns</a></li>
-                  <li><a href="services/implants-over-denture.html">Implants Over Denture</a></li>
-                  <li><a href="services/flexible-rpd-denture.html">Flexible RPD Denture</a></li>
-                  <li><a href="services/bps.html">BPS Denture</a></li>
+                  <li><a href="./Implants-over-denture.html">Implants Over Denture</a></li>
+                  <li><a href="./flexible-rpd-denture.html">Flexible RPD Denture</a></li>
+                  <li><a href="./bps.html">BPS Denture</a></li>
                 </ul>
               </li>
               <li class="nav-item drop-down">
@@ -140,10 +140,10 @@
                 <i class="fa fa-angle-down mobile"></i>
                 <ul class="drop-items">
                   <li class="nav-item">
-                    <a href="services/prp-hair-treatment.html">PRP Hair Treatment
+                    <a href="./prp-hair-treatment.html">PRP Hair Treatment
                     </a>
                   </li>
-                  <li><a href="services/gfc-hair-growth.html">GFC Hair Growth</a></li>
+                  <li><a href="./gfc-hair-growth.html">GFC Hair Growth</a></li>
                 </ul>
               </li>
               <li class="nav-item"><a href="../contact.html" class="nav-link">Contact Us</a></li>
