--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
           <li class="nav-item drop-down">
 
-            <a href="services.html" class="nav-link">
+            <a href="#" class="nav-link">
               General Medicine
               <i class="fa fa-angle-down desktop"></i>
 
@@ -132,7 +132,7 @@
           </li>
           <li class="nav-item drop-down">
 
-            <a href="services.html" class="nav-link">
+            <a href="#" class="nav-link">
               Hair Transplantation
               <i class="fa fa-angle-down desktop"></i>
 
