--- a/services/Personalizedm-Treatment-Plans.html
+++ b/services/Personalizedm-Treatment-Plans.html
@@ -65,7 +65,7 @@
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="col-md-2  mb-2 mb-md-0 align-items-center">
-          <a class="navbar-brand" href="index.html"><img src="../images/MEDVIS-1.png" alt="medvis hospital" /></a>
+          <a class="navbar-brand" href="../index.html"><img src="../images/MEDVIS-1.png" alt="medvis hospital" /></a>
         </div>
         <div class="container d-flex align-items-center justify-content-end">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
@@ -75,7 +75,7 @@
           </button>
           <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav">
-              <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
+              <li class="nav-item active"><a href="../index.html" class="nav-link pl-0">Home</a></li>
               <li class="nav-item drop-down">
     
                 <a href="services.html" class="nav-link">
@@ -114,19 +114,19 @@
                 <i class="fa fa-angle-down mobile"></i>
                 <ul class="drop-items">
                   <li class="nav-item">
-                    <a href="services/scaling-and-polishing.html">Scaling And Polishing</a>
+                    <a href="./scaling-and-polishing.html">Scaling And Polishing</a>
                   </li>
-                  <li><a href="services/bleeding-gums.html">Bleeding Gums</a></li>
-                  <li><a href="services/flap-surgery.html">Flap Surgery</a></li>
-                  <li><a href="services/orthodontic-treatments.html">Orthodontic Treatments</a></li>
-                  <li><a href="services/aligners.html">Aligners</a></li>
-                  <li><a href="services/fillings.html">Fillings</a></li>
-                  <li><a href="services/root-canal-treatment.html">Root Canal Treatment</a></li>
-                  <li><a href="services/extraction.html">Extraction(Wisdom Tooth)</a></li>
-                  <li><a href="services/zirconia-crowns.html">Zirconia Crowns</a></li>
-                  <li><a href="services/implants-over-denture.html">Implants Over Denture</a></li>
-                  <li><a href="services/flexible-rpd-denture.html">Flexible RPD Denture</a></li>
-                  <li><a href="services/bps.html">BPS Denture</a></li>
+                  <li><a href="./bleeding-gums.html">Bleeding Gums</a></li>
+                  <li><a href="./flap-surgery.html">Flap Surgery</a></li>
+                  <li><a href="./orthodontic-Treatments.html">Orthodontic Treatments</a></li>
+                  <li><a href="./aligners.html">Aligners</a></li>
+                  <li><a href="./fillings.html">Fillings</a></li>
+                  <li><a href="./root-canal-treatment.html">Root Canal Treatment</a></li>
+                  <li><a href="./extraction.html">Extraction(Wisdom Tooth)</a></li>
+                  <li><a href="./zirconia-crowns.html">Zirconia Crowns</a></li>
+                  <li><a href="./Implants-over-denture.html">Implants Over Denture</a></li>
+                  <li><a href="./flexible-rpd-denture.html">Flexible RPD Denture</a></li>
+                  <li><a href="./bps.html">BPS Denture</a></li>
                 </ul>
               </li>
               <li class="nav-item drop-down">
@@ -139,14 +139,14 @@
                 <i class="fa fa-angle-down mobile"></i>
                 <ul class="drop-items">
                   <li class="nav-item">
-                    <a href="services/prp-hair-treatment.html">PRP Hair Treatment
+                    <a href="./prp-hair-treatment.html">PRP Hair Treatment
                     </a>
                   </li>
-                  <li><a href="services/gfc-hair-growth.html">GFC Hair Growth</a></li>
+                  <li><a href="./gfc-hair-growth.html">GFC Hair Growth</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
-              <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+              <li class="nav-item"><a href="../contact.html" class="nav-link">Contact Us</a></li>
+              <li class="nav-item"><a href="../about.html" class="nav-link">About Us</a></li>
     
             </ul>
           </div>
